<?xml version="1.0" encoding="ISO-8859-1"?>
<!--
    CRUK-CI Clarity REST API Java Client.
    Copyright (C) 2013 Cancer Research UK Cambridge Institute.

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>org.cruk.clarity</groupId>
    <artifactId>clarity-client2-parent</artifactId>
    <packaging>pom</packaging>
    <version>2.31.1</version>

    <name>CRUK-CI Clarity API Client</name>

    <description>
        A Java client for working with Clarity's REST API.
    </description>

    <url>https://crukci-bioinformatics.github.io/clarityclient2</url>

    <inceptionYear>2013</inceptionYear>

    <organization>
        <name>Cancer Research UK Cambridge Institute</name>
        <url>https://www.cruk.cam.ac.uk/</url>
    </organization>

    <developers>
        <developer>
            <name>Richard Bowers</name>
            <email>richard.bowers@cruk.cam.ac.uk</email>
            <organization>Cancer Research UK Cambridge Institute</organization>
            <roles>
                <role>Author</role>
                <role>Lead Developer</role>
            </roles>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>GNU General Public License, version 3.0</name>
            <url>http://www.gnu.org/licenses/gpl-3.0.txt</url>
            <distribution>repo</distribution>
        </license>
        <license>
            <name>GNU Lesser General Public License, version 3.0</name>
            <url>http://www.gnu.org/licenses/lgpl-3.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <dependency.locations.enabled>false</dependency.locations.enabled>
    </properties>

    <distributionManagement>
        <downloadUrl>https://github.com/crukci-bioinformatics/clarityclient2/archive/master.zip</downloadUrl>
        <site>
            <id>github</id>
            <name>GitHub Pages</name>
            <url>ssh://git@github.com/crukci-bioinformatics/clarityclient2</url>
        </site>
        <repository>
            <id>bioinformatics</id>
            <url>scpexe://comp-httpdev001.cri.camres.org/var/www/html/bioinformatics/maven</url>
        </repository>
        <snapshotRepository>
            <id>bioinformatics</id>
            <url>scpexe://internal-bioinformatics.cruk.cam.ac.uk/var/www/html/maven</url>
        </snapshotRepository>
    </distributionManagement>

    <scm>
        <connection>scm:git:https://github.com/crukci-bioinformatics/clarityclient2</connection>
        <developerConnection>scm:git:ssh://git@github.com/crukci-bioinformatics/clarityclient2</developerConnection>
        <url>https://github.com/crukci-bioinformatics/clarityclient2</url>
    </scm>

    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/crukci-bioinformatics/clarityclient2/issues</url>
    </issueManagement>

    <repositories>
        <repository>
            <id>crukci-bioinformatics</id>
            <url>https://content.cruk.cam.ac.uk/bioinformatics/maven</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>bioinformatics</id>
            <url>https://internal-bioinformatics.cruk.cam.ac.uk/maven</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <build>
        <extensions>
            <extension>
                <groupId>org.apache.maven.wagon</groupId>
                <artifactId>wagon-ssh</artifactId>
                <version>2.12</version>
            </extension>
            <extension>
                <groupId>org.apache.maven.wagon</groupId>
                <artifactId>wagon-ssh-external</artifactId>
                <version>2.12</version>
            </extension>
        </extensions>

        <pluginManagement>
            <plugins>

                <!-- Build plugins -->

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>3.3.2</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.13.0</version>
                    <configuration>
                        <source>17</source>
                        <target>17</target>
                        <encoding>UTF-8</encoding>
                        <compilerArgs>
                            <compilerArg>-Xlint:all</compilerArg>
                            <compilerArg>-nowarn</compilerArg>
                        </compilerArgs>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>3.6.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>3.1.2</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-install-plugin</artifactId>
                    <version>3.1.2</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.4.1</version>
                    <configuration>
                        <archive>
                            <index>true</index>
                            <manifest>
                                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                                <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                            </manifest>
                        </archive>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.3.1</version>
                    <configuration>
                        <encoding>UTF-8</encoding>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-site-plugin</artifactId>
                    <version>4.0.0-M8</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>3.3.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.2.5</version>
                    <configuration>
                        <useModulePath>true</useModulePath>
                        <argLine>-XX:+EnableDynamicAgentLoading</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-toolchains-plugin</artifactId>
                    <version>3.2.0</version>
                </plugin>

                <!-- Reporting plugins -->

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>3.6.3</version>
                    <configuration>
                        <source>17</source>
                        <encoding>UTF-8</encoding>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-project-info-reports-plugin</artifactId>
                    <version>3.5.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-report-plugin</artifactId>
                    <version>3.2.5</version>
                </plugin>

                <!-- Eclipse helper -->

                <plugin>
                    <groupId>org.eclipse.m2e</groupId>
                    <artifactId>lifecycle-mapping</artifactId>
                    <version>1.0.0</version>
                    <configuration>
                        <lifecycleMappingMetadata>
                            <pluginExecutions>
                                <pluginExecution>
                                    <pluginExecutionFilter>
                                        <groupId>org.apache.maven.plugins</groupId>
                                        <artifactId>maven-toolchains-plugin</artifactId>
                                        <versionRange>[3.0,)</versionRange>
                                        <goals>
                                            <goal>toolchain</goal>
                                        </goals>
                                    </pluginExecutionFilter>
                                    <action>
                                        <ignore/>
                                    </action>
                                </pluginExecution>
                            </pluginExecutions>
                        </lifecycleMappingMetadata>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.16.2</version>
                <configuration>
                    <generateBackupPoms>false</generateBackupPoms>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.4.1</version>
                <executions>
                    <execution>
                        <id>enforce-maven</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>3.6.3</version>
                                </requireMavenVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-toolchains-plugin</artifactId>
                <configuration>
                    <toolchains>
                        <jdk>
                            <version>17</version>
                        </jdk>
                    </toolchains>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>toolchain</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>

        <resources>
            <resource>
                <directory>${project.basedir}/src/main/resources</directory>
                <targetPath>${project.build.outputDirectory}</targetPath>
            </resource>
            <resource>
                <directory>${project.basedir}/src/test/resources</directory>
                <targetPath>${project.build.testOutputDirectory}</targetPath>
            </resource>
            <resource>
                <directory>${project.basedir}</directory>
                <targetPath>META-INF</targetPath>
                <includes>
                    <include>LICENSE*</include>
                </includes>
            </resource>
        </resources>
    </build>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-report-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <reportSets>
                    <reportSet>
                        <reports>
                            <!-- Generate aggregate Javadoc only -->
                        </reports>
                    </reportSet>
                    <reportSet>
                        <id>aggregate</id>
                        <inherited>false</inherited>
                        <reports>
                            <report>aggregate</report>
                        </reports>
                    </reportSet>
                </reportSets>
                <configuration>
                    <breakiterator>true</breakiterator>
                    <serialwarn>false</serialwarn>
                    <show>protected</show>
                    <links>
                        <link>https://docs.oracle.com/en/java/javase/17/docs/api</link>
                        <link>https://jakarta.ee/specifications/platform/10/apidocs</link>
                        <link>https://www.slf4j.org/apidocs/</link>
                        <link>https://commons.apache.org/proper/commons-beanutils/javadocs/v1.9.4/apidocs</link>
                        <link>https://commons.apache.org/proper/commons-collections/javadocs/api-4.4</link>
                        <link>https://commons.apache.org/proper/commons-io/javadocs/api-release</link>
                        <link>https://commons.apache.org/proper/commons-lang/javadocs/api-release</link>
                        <link>https://docs.spring.io/spring-framework/docs/6.1.x/javadoc-api</link>
                        <link>https://docs.spring.io/spring-integration/docs/6.2.x/api</link>
                        <link>https://www.ehcache.org/apidocs/3.10.0</link>
                        <link>https://hc.apache.org/httpcomponents-client-5.3.x/current/httpclient5/apidocs</link>
                        <link>https://hc.apache.org/httpcomponents-core-5.2.x/current/httpcore5/apidocs</link>
                        <link>https://eclipse.dev/aspectj/doc/released/weaver-api</link>
                    </links>
                </configuration>
            </plugin>
        </plugins>
    </reporting>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.cruk.clarity</groupId>
                <artifactId>clarity-client2-bom</artifactId>
                <version>2.31.1</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <profiles>
        <profile>
            <id>build</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <modules>
                <module>bom</module>
                <module>model</module>
                <module>client</module>
                <module>mina</module>
                <module>jsch</module>
                <module>cache</module>
                <module>recorder</module>
            </modules>
        </profile>
        <profile>
            <id>sitebuild</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <modules>
                <module>model</module>
                <module>client</module>
                <module>mina</module>
                <module>jsch</module>
                <module>cache</module>
                <module>recorder</module>
            </modules>
        </profile>
    </profiles>

    <dependencies>
        <dependency>
            <groupId>org.glassfish.jaxb</groupId>
            <artifactId>jaxb-runtime</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j2-impl</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>

